# NUCLEO_F446ZE_DAC

./: .gitignore  .mxproject  CMakeLists.txt  Personal_DAC_01 Debug.launch  Personal_DAC_01.ioc  README.md
.github/workflows/: main.yml
.metadata/.plugins/org.eclipse.core.resources/.safetable/: org.eclipse.core.resources
Common/: CMakeLists.txt
Common/inc/: sine_proc.h  testables.h  wave_data.h
Common/src/: sine_proc.c  testables.c
Core/Inc/: stm32f4xx_hal_conf.h  stm32f4xx_it.h
Core/Src/: main.c  stm32f4xx_hal_msp.c  stm32f4xx_it.c
Debug/: Personal_DAC_01.list  makefile  objects.list  sources.mk
Debug/Common/: subdir.mk
Debug/Common/src/: subdir.mk
Debug/Core/Src/: main.cyclo  main.d  main.su  stm32f4xx_hal_msp.cyclo  stm32f4xx_hal_msp.d  stm32f4xx_hal_msp.su  stm32f4xx_it.cyclo  stm32f4xx_it.d  stm32f4xx_it.su  subdir.mk  system_stm32f4xx.d
Debug/Core/Startup/: subdir.mk
Debug/Custom/src/: subdir.mk
Debug/Drivers/STM32F4xx_HAL_Driver/Src/: stm32f4xx_hal.d  stm32f4xx_hal_adc.d  stm32f4xx_hal_adc_ex.d  stm32f4xx_hal_cortex.d  stm32f4xx_hal_dac.d  stm32f4xx_hal_dma.d  stm32f4xx_hal_dma_ex.d  stm32f4xx_hal_exti.d  stm32f4xx_hal_flash.d  stm32f4xx_hal_flash_ex.d  stm32f4xx_hal_flash_ramfunc.d  stm32f4xx_hal_gpio.d  stm32f4xx_hal_pcd.d  stm32f4xx_hal_pcd_ex.d  stm32f4xx_hal_pwr.d  stm32f4xx_hal_pwr_ex.d  (+7 more)
Debug/Testing/: subdir.mk
SWV_export/: SWV_Data_Trace.txt  SWV_Data_Trace2.txt  SWV_Data_Trace3.txt
Testing/: CMakeLists.txt  test_main.cpp
Unit Test/: makefile  sources.mk
UnitTest/Common/src/: subdir.mk
UnitTest/Testing/: subdir.mk
